# embucket

./: .dockerignore  .env.example  .env_e2e  .gitignore  .vale.ini  CODING_CONVENTIONS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml  prompt2.md
crates/api-internal-rest/: Cargo.toml
crates/api-internal-rest/src/: error.rs  handlers.rs  router.rs  state.rs
crates/api-sessions/: Cargo.toml
crates/api-sessions/src/: error.rs  layer.rs  lib.rs  session.rs
crates/api-snowflake-rest/: Cargo.toml  README.md
crates/api-snowflake-rest/src/: auth.rs  error.rs  handlers.rs  layer.rs  lib.rs  models.rs  router.rs  schemas.rs  sql_state.rs  state.rs  test_server.rs
crates/api-snowflake-rest/src/server/: error.rs  handlers.rs  helpers.rs  layer.rs  mod.rs  router.rs  server_models.rs  state.rs  test_server.rs
crates/api-snowflake-rest/src/tests/: client.rs  external_server.rs  mod.rs  snow_sql.rs  sql_macro.rs  test_generic_sqls.rs  test_gzip_encoding.rs  test_rest_quick_sqls.rs
crates/api-ui/: Cargo.toml
crates/api-ui/src/: config.rs  error.rs  layers.rs  lib.rs  router.rs  state.rs  test_server.rs
crates/api-ui/src/auth/: error.rs  handlers.rs  layer.rs  mod.rs
crates/api-ui/src/dashboard/: error.rs  handlers.rs  mod.rs
crates/api-ui/src/databases/: error.rs  handlers.rs  mod.rs
crates/api-ui/src/navigation_trees/: error.rs  handlers.rs  mod.rs  models.rs
crates/api-ui/src/queries/: error.rs  handlers.rs  models.rs
crates/api-ui/src/schemas/: error.rs  handlers.rs  mod.rs
crates/api-ui/src/tables/: error.rs  handlers.rs
crates/api-ui/src/tests/: auth.rs  common.rs  dashboard.rs  databases.rs  schemas.rs  volumes.rs
crates/api-ui/src/volumes/: error.rs  handlers.rs  mod.rs  models.rs
crates/api-ui/src/web_assets/: error.rs  handler.rs  mod.rs  router.rs  tests.rs
crates/api-ui/src/worksheets/: error.rs  handlers.rs  mod.rs
crates/core-executor/: Cargo.toml  README.md
crates/core-executor/src/: dedicated_executor.rs  error.rs  error_code.rs  lib.rs  models.rs  query.rs  running_queries.rs  service.rs  session.rs  snowflake_error.rs  status_code.rs  utils.rs
crates/core-executor/src/datafusion/: extension_planner.rs  mod.rs  planner.rs  type_planner.rs
crates/core-executor/src/tests/: e2e_common.rs  mod.rs  query.rs  service.rs  snowflake_errors.rs  tests_e2e.rs
crates/core-history/: Cargo.toml
crates/core-history/src/: errors.rs  history_store.rs  lib.rs
crates/core-history/src/entities/: mod.rs  query.rs  query_id.rs  query_id_param.rs  result_set.rs  worksheet_query_ref.rs
crates/core-metastore/: Cargo.toml
crates/core-metastore/src/: error.rs  lib.rs  metastore.rs
crates/core-metastore/src/models/: schema.rs  table.rs  volumes.rs
crates/core-metastore/src/snapshots/: core_metastore__metastore__tests__create_database.snap  core_metastore__metastore__tests__create_s3table_volume.snap  core_metastore__metastore__tests__create_volumes.snap  core_metastore__metastore__tests__duplicate_volume.snap  core_metastore__metastore__tests__schemas.snap  core_metastore__metastore__tests__tables.snap
crates/core-utils/: Cargo.toml
crates/core-utils/src/: errors.rs  lib.rs  scan_iterator.rs
crates/df-catalog/: Cargo.toml
crates/df-catalog/src/: catalog.rs  catalog_list.rs  df_error.rs  error.rs  lib.rs  schema.rs  table.rs
crates/df-catalog/src/information_schema/: columns.rs  config.rs  databases.rs  df_settings.rs  information_schema.rs  navigation_tree.rs  parameters.rs  routines.rs  schemata.rs  session_params.rs  tables.rs  views.rs
crates/df-catalog/src/tests/: information_schema.rs
crates/embucket-functions/: Cargo.toml
crates/embucket-functions/docs/: function_implementation_guide.md
crates/embucket-functions/src/: arrow_error.rs  df_error.rs  errors.rs  expr_planner.rs  json.rs  lib.rs  session_params.rs  utils.rs
crates/embucket-functions/src/aggregate/: array_union_agg.rs  errors.rs  mod.rs  object_agg.rs
crates/embucket-functions/src/conditional/: iff.rs  mod.rs  zeroifnull.rs
crates/embucket-functions/src/conversion/: errors.rs  mod.rs  to_array.rs  to_binary.rs  to_boolean.rs  to_date.rs  to_decimal.rs  to_object.rs  to_timestamp.rs  to_varchar.rs  to_variant.rs
crates/embucket-functions/src/crypto/: md5.rs  mod.rs
crates/embucket-functions/src/datetime/: add_months.rs  convert_timezone.rs  date_add.rs  date_diff.rs  date_part_extract.rs  dayname.rs  errors.rs  last_day.rs  mod.rs  monthname.rs  previous_day.rs  timestamp_from_parts.rs
crates/embucket-functions/src/encryption/: decrypt_raw.rs  encrypt_raw.rs  errors.rs  mod.rs
crates/embucket-functions/src/geospatial/: data_types.rs  error.rs
crates/embucket-functions/src/numeric/: div0.rs  errors.rs  mod.rs
crates/embucket-functions/src/regexp/: errors.rs  mod.rs  regexp_instr.rs  regexp_like.rs  regexp_replace.rs  regexp_substr.rs  regexp_substr_all.rs
crates/embucket-functions/src/semi-structured/: errors.rs  get.rs  get_path.rs  is_typeof.rs  mod.rs  parse_json.rs  typeof_func.rs
crates/embucket-functions/src/session/: mod.rs
crates/embucket-functions/src/string-binary/: errors.rs  hex_decode_binary.rs  hex_decode_string.rs  hex_encode.rs  length.rs  lower.rs  mod.rs  parse_ip.rs  randstr.rs  replace.rs  sha2.rs  split.rs  strtok.rs  substr.rs
crates/embucket-functions/src/system/: cancel_query.rs  errors.rs  mod.rs  sleep.rs  typeof_func.rs
crates/embucket-functions/src/table/: errors.rs  flatten.rs  mod.rs  result_scan.rs
crates/embucket-functions/src/tests/: mod.rs  utils.rs  visitors.rs
crates/embucket-functions/src/visitors/: copy_into_identifiers.rs  fetch_to_limit.rs  functions_rewriter.rs  inline_aliases_in_query.rs  like_any.rs  like_ilike_any.rs  mod.rs  qualify_in_query.rs  rlike_regexp_expr_rewriter.rs  table_functions.rs  table_functions_cte_relation.rs  timestamp.rs  top_limit.rs
crates/embucket-functions/src/window/: conditional_true_event.rs  mod.rs
crates/embucket-seed/: Cargo.toml  README.md
crates/embucket-seed/src/: tests.rs
(+1683 files in other folders)
