[package]
name = "api-internal-rest"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
core-metastore = { path = "../core-metastore" }
core-utils = { path = "../core-utils" }
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }
core-history = { path = "../core-history" }

axum = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
