[package]
name = "api-snowflake-rest"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
api-sessions = { path = "../api-sessions" }
core-executor = { path = "../core-executor" }
core-metastore = { path = "../core-metastore" }
core-history = { path = "../core-history" }
core-utils = { path = "../core-utils" }
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

axum = { workspace = true }
flate2 = "1"
base64 = "0.22"
indexmap = { workspace = true }
datafusion = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tower-sessions = { workspace = true }

[dev-dependencies]
reqwest = "0.12.14"

[lints]
workspace = true
