[package]
name = "api-snowflake-rest"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[features]
default = ["default-server"]
external-server = []
default-server = [
    "dep:api-sessions", 
    "dep:core-executor", 
    "dep:core-metastore", 
    "dep:core-history", 
    "dep:core-utils",
    "dep:tower-sessions",
    "dep:tower-http",
    "dep:axum",
    "dep:snafu",
    "dep:tracing",
    "dep:flate2",
    "dep:indexmap",
    "dep:base64",
    "dep:datafusion",
    "dep:tower",
    "dep:strum"
]

[dependencies]
api-sessions = { path = "../api-sessions", optional = true }
core-executor = { path = "../core-executor", optional = true }
core-metastore = { path = "../core-metastore", optional = true }
core-history = { path = "../core-history", optional = true }
core-utils = { path = "../core-utils", optional = true }

error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

tower-sessions = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
snafu = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
flate2 = { version = "1", optional = true}
indexmap = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }
datafusion = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
strum = { workspace = true, optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }

[lints]
workspace = true
