[package]
name = "core-executor"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
core-utils = { path = "../core-utils" }
core-metastore = { path = "../core-metastore" }
core-history = {  path = "../core-history" }
df-catalog = { path = "../df-catalog" }
embucket-functions = { path = "../embucket-functions" } # features = ["geospatial"] 
arrow-schema = { version = "55", features = ["serde"] }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-doc = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions-json = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion_iceberg = { workspace = true }
futures = { workspace = true }
sqlparser = { git = "https://github.com/Embucket/datafusion-sqlparser-rs.git", rev = "8d9cbc2669d7fc3d79d7d1d725ac20f1e9bfe10e", features = [
  "visitor",
] }
iceberg-rust = { workspace = true }
iceberg-rust-spec = { workspace = true }
iceberg-s3tables-catalog = { workspace = true }
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

clap = {  workspace = true }
object_store = { workspace = true }
regex = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
tracing-attributes = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.17"

url = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
time = { workspace = true }
pin-project-lite = "0.2.16"
lru = "0.15.0"

# added for making Snowflake error
slatedb = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
insta = { version = "1.42.0", features = ["yaml", "filters"] }
paste = "1"
dotenv = "0.15.0"
reqwest = "0.12.14"
aws-config = { version = "1.8.3", features = ["behavior-version-latest"] }
aws-sdk-s3tables = { version = "1.32.0", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1.80.0", features = ["behavior-version-latest"] }

[lints]
workspace = true
