[package]
name = "core-metastore"
version = "0.1.0"
edition = "2021"
license-file = { workspace = true }

[dependencies]
core-utils = { path = "../core-utils" }
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
iceberg-rust = { workspace = true }
iceberg-rust-spec = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slatedb = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
