[package]
name = "core-utils"
version = "0.1.0"
edition = "2021"
license-file = { workspace = true }

[dependencies]
error-stack = { path = "../error-stack" }
error-stack-trace = { path = "../error-stack-trace" }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
iceberg = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slatedb = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true }
