[package]
name = "embucket-functions"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[features]
geospatial = [
    "dep:geoarrow",
    "dep:geohash",
    "dep:geozero",
    "dep:geoarrow-schema",
    "dep:geo-traits",
    "dep:geo-types",
    "dep:geoarrow-array",
    "dep:geoarrow-cast",
    "dep:geoarrow-geoparquet",
    "dep:geoarrow-test",
]

[dependencies]
core-history = { path = "../core-history" }
error-stack-trace = { path = "../error-stack-trace" }
error-stack = { path = "../error-stack" }

geo-traits = { version = "0.2.0", optional = true }
geo-types = { version = "0.7.15", optional = true }
geozero = { version = "0.14.0", optional = true }
geohash = { version = "0.13.1", optional = true }
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs.git" , optional = true, package = "geoarrow", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geoarrow-array = { git = "https://github.com/geoarrow/geoarrow-rs.git" , optional = true, package = "geoarrow-array", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geoarrow-cast = { git = "https://github.com/geoarrow/geoarrow-rs.git" , optional = true, package = "geoarrow-cast", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geoarrow-geoparquet = { git = "https://github.com/geoarrow/geoarrow-rs.git" , optional = true, package = "geoarrow-geoparquet", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geoarrow-schema = { git = "https://github.com/geoarrow/geoarrow-rs.git" , optional = true, package = "geoarrow-schema", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }
geoarrow-test = { git = "https://github.com/geoarrow/geoarrow-rs.git" , optional = true, package = "geoarrow-test", rev = "c241034f98eb1709342fc8da6d2cb87140f10cc5" }

arrow-schema = { version = "55", features = ["serde"] }
chrono = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-doc = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-macros = { workspace = true }
datafusion-physical-plan = { workspace = true }
paste = "1"
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { version = "0.8", default-features = false, features = [
    "runtime-rng",
] }
base64 = "0.22.1"
jsonpath_lib = "0.3.0"
indexmap = "2.10.0"
strsim = "0.11"
tracing = "0.1.41"
tokio = { workspace = true }
datafusion-functions-json = { workspace = true }
hex = "0.4.3"
sha2 = "0.10"
snafu = { workspace = true }
rust_decimal = "1.37.2"
futures = { workspace = true }
async-trait = { workspace = true }
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
lazy_static = "1.5.0"
regex = "1.11.1"
chrono-tz = "0.10.3"
dashmap = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
ipnet = "2.11.0"

[dev-dependencies]
bytes = { workspace = true }
insta = { version = "1.42.0", features = ["yaml", "filters"] }
snafu = { workspace = true }
paste = "1"

[[bin]]
name = "generate-implemented-functions"
path = "src/bin/generate_implemented_functions.rs"

[lints]
workspace = true
